[package]
name = "site"
version = "0.1.0"
authors = ["jakechv <jakechvatal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = "0.8.4"
slugify = "0.1.0"
serde = "1.0.117"
serde_json = "1.0.59"
github-gql-rs = { git = "https://github.com/github-rs/github-rs.git", branch = "master" }
dotenv = "0.15.0"
