[package]
name = "site"
version = "0.1.0"
authors = ["jakechv <jakechvatal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = "0.8.4"
slugify = "0.1.0"
serde = "1.0.117"
serde_json = "1.0.59"
dotenv = "0.15.0"
graphql_client = "0.9.0"
anyhow = "1.0"
reqwest = "^0.9"
prettytable-rs = "^0.7"
structopt = "^0.3"
envy = "^0.3"
log = "^0.4"
env_logger = "^0.5"

